gcc/testsuite/rust/rustc/ui/parser/raw/raw-string.rs
fn main() {
    let x = r##"lol"#;
// { dg-error ".E0748." "" { target *-*-* } .-1 }
}

